cargo-features = ["edition2024"]

[package]
name = "rust-idle"
version = "0.1.1"
description = "Rust spin-down utility, a reimplementation of hd-idle"
authors = ["Maël kerbiriou <m431.kerbiriou@gmail.com>"]
repository = "http://github.com/piezoid/rust-idle"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["hard-disk", "hd-idle", "cli", "daemon"]
categories = ["command-line-utilities", "hardware-support"]
edition = "2024"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = "debuginfo" # Automatically strip symbols from the binary.
debug = false
debug-assertions = false

[dependencies]
nc = "0.9"

[dependencies.os_str_bytes]
version = "7.0"
features = ["raw_os_str"]
default-features = false
